redactable/tests/ui/sensitive_variant_not_sensitive_rejected.rs
use redactable::Sensitive;

#[derive(Sensitive)]
enum Event {
    #[not_sensitive]
    Message { value: String },
}

fn main() {}
